--- a/index.html
+++ b/index.html
@@ -4,24 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Challenge-1</title>
+    <title>landing page</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="(https://fonts.google.com/specimen/Lexend+Deca)">
 </head>
 <body>
     <div class="container">
         <div class="container-1">
-            <h2>Get <span>Insights</span> that help <br> your business grow. </h2>
-            <p>Discover the benefits of data analytics and make</p> <p class="e"> better decisions regarding revenue,customers</p> <p class="f"> experience, and overall efficiency </p>
-            <div class="class">
-                <div class="class-1"> <b class="a">10K+</b> <br> <nav>COMPANIES</nav></div>
-                <div class="class-2"> <b class="b">314</b> <br> <nav>TEMPLATES</nav></div>
-                <div class="class-3"> <b class="c">12M+</b><br> <nav>QUERIES</nav></div>
-            </div>
+            <h2 class="main-heading"> Get <span>Insights</span>  that help <br> your business grow. </h2>
+            <p class="main-paragraph-1">Discover the benefits of data analytics and make</p>
+             <p class="main-paragraph-1"> better decisions regarding revenue,customers</p> 
+             <p class="main-paragraph-1"> experience, and overall efficiency </p>
+             <div class="about">
+                <div class="about-1">
+                    <h2 class="about-heading">10K+</h2>
+                    <p class="about-paragraph">COMPANIES</p>
+                </div>
+                <div class="about-2">
+                    <h2 class="about-heading">314</h2>
+                    <p class="about-paragraph">TEMPLATES</p>
+                </div>
+                <div class="about-3">
+                    <h2 class="about-heading">12M+</h2>
+                    <p class="about-paragraph">QUERIES</p>
+                </div>
+             </div>
         </div>
-        <div class="container-2"><img src="images/image-header-desktop.jpg" alt="desktop image"></div>
+        <div class="container-2">
+          <div class="image-wrapper">
+            <img src="images/image-header-desktop.jpg" class="container-2-img">
+          </div>  
+        </div>
     </div>
 </body>
 </html>
